[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/worldItems/stone1.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/worldItems/stone4.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/worldItems/pagoda.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/worldItems/ground1.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/worldItems/Stone3.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]

[node name="Game" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="Scene Root5" type="Spatial" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 0.986418, -0.164254, 0, 0.164254, 0.986418, -25.5689, -0.14924, 9.82965 )

[node name="Scene Root4" parent="." index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 0.815332, 0.578994, 0, -0.578994, 0.815332, -6.05052, -2.04835, 2.68749 )

[node name="Scene Root" parent="." index="2" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.3959, 0, 0 )

[node name="Scene Root3" parent="." index="3" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.177063, 0 )

[node name="MeshInstance" type="MeshInstance" parent="." index="4"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.249861, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = null
skeleton = NodePath("..")

[node name="Scene Root2" parent="." index="5" instance=ExtResource( 6 )]

[node name="Player" parent="." index="6" instance=ExtResource( 7 )]

[node name="SpawnPoints" type="Spatial" parent="." index="7"]

[node name="SpawnPoint1" type="Position3D" parent="SpawnPoints" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.74637, -4.76837e-007, -9.61515 )

[node name="SpawnPoint2" type="Position3D" parent="SpawnPoints" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0256, 0, 9.8561 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="8"]

transform = Transform( -0.134875, 0.869096, 0.475899, 0.119765, -0.462468, 0.87851, 0.983598, 0.175485, -0.0417118, 15.5195, 15.0856, -8.93511 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 1
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Directional Shadow", "Shadow" ]

[connection signal="input_event" from="Scene Root3/ground/StaticBody" to="Player" method="_on_Ground_input_event"]

[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]


[editable path="Scene Root3"]
